Add push notification service (APNs + FCM) with PATCH /auth/me
- NotificationService reads device tokens from User.devices JSONB
- APNs via HTTP/2 with ES256 provider JWT (reuses Apple Sign In .p8 key)
- FCM v1 via google-auth OAuth2 service account
- Auto-deactivates tokens on 410/UNREGISTERED responses
- PATCH /auth/me for device registration and user profile updates
- POST /notifications/send relay endpoint (API-key protected, pg_cron target)
- Detailed setup guide in notifications.py docstring
- K8s configmap + secrets updated for APNs/FCM env vars

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ P8_OPENAI_API_KEY=sk-...
 P8_KMS_PROVIDER=local
 P8_KMS_LOCAL_KEYFILE=.dev-master.key
 
+# API key (protects all endpoints except /health and /auth)
+P8_API_KEY=
+
 # Auth / JWT
 P8_AUTH_SECRET_KEY=changeme-in-production
 P8_AUTH_ACCESS_TOKEN_EXPIRY=3600
@@ -19,6 +22,14 @@ P8_APPLE_TEAM_ID=
 P8_APPLE_KEY_ID=
 P8_APPLE_PRIVATE_KEY_PATH=
 
+# APNs (reuses Apple Sign In key above)
+P8_APNS_BUNDLE_ID=ai.percolationlabs.remapp
+P8_APNS_ENVIRONMENT=sandbox
+
+# FCM (Android push)
+P8_FCM_PROJECT_ID=
+P8_FCM_SERVICE_ACCOUNT_FILE=
+
 # Magic link email
 P8_MAGIC_LINK_BASE_URL=
 P8_EMAIL_PROVIDER=console
@@ -28,3 +39,15 @@ P8_SMTP_PORT=587
 P8_SMTP_USERNAME=
 P8_SMTP_PASSWORD=
 P8_RESEND_API_KEY=
+
+# S3 / Object Storage (Hetzner, AWS, MinIO)
+P8_S3_ENDPOINT_URL=
+P8_S3_BUCKET=
+P8_S3_REGION=
+P8_S3_ACCESS_KEY_ID=
+P8_S3_SECRET_ACCESS_KEY=
+
+# Stripe
+P8_STRIPE_SECRET_KEY=sk_test_...
+P8_STRIPE_PUBLISHABLE_KEY=pk_test_...
+P8_STRIPE_WEBHOOK_SECRET=whsec_...
