--- a/manifests/application/p8-stack/overlays/hetzner/secrets.yaml
+++ b/manifests/application/p8-stack/overlays/hetzner/secrets.yaml
@@ -1,7 +1,16 @@
 # Hetzner Secrets — replace placeholder values before applying
-# Generate base64 values: echo -n "value" | base64
 #
-# For production, consider using sealed-secrets or external-secrets with Vault.
+# Two secrets:
+#   p8-database-credentials  — CNPG bootstrap + DATABASE_URL interpolation
+#   p8-app-secrets           — all other sensitive env vars (envFrom: secretRef)
+#
+# All deployments (API + workers) share p8-app-secrets via envFrom.
+# Keys are named as P8_* env vars so envFrom injects them directly.
+#
+# Create from .env:
+#   kubectl --context=p8-w-1 -n p8 create secret generic p8-database-credentials \
+#     --from-literal=username=p8user --from-literal=password=REAL_PASSWORD \
+#     --dry-run=client -o yaml | kubectl apply -f -
 
 apiVersion: v1
 kind: Secret
@@ -14,15 +23,43 @@ stringData:
   password: "CHANGE_ME_DB_PASSWORD"
 
 ---
+# Unified app secret — shared by API and all workers via envFrom: secretRef
 apiVersion: v1
 kind: Secret
 metadata:
-  name: p8-llm-api-keys
+  name: p8-app-secrets
   namespace: p8
 type: Opaque
 stringData:
-  openai-api-key: "CHANGE_ME_OPENAI_KEY"
-  anthropic-api-key: "CHANGE_ME_ANTHROPIC_KEY"
-  auth-session-secret: "CHANGE_ME_SESSION_SECRET_32CHARS"
-  auth-google-client-id: ""
-  auth-google-client-secret: ""
+  # LLM
+  P8_OPENAI_API_KEY: "CHANGE_ME_OPENAI_KEY"
+  # Auth
+  P8_AUTH_SECRET_KEY: "CHANGE_ME_SESSION_SECRET_32CHARS"
+  P8_API_KEY: ""
+  P8_GOOGLE_CLIENT_ID: ""
+  P8_GOOGLE_CLIENT_SECRET: ""
+  # Apple Sign In + APNs
+  P8_APPLE_CLIENT_ID: ""
+  P8_APPLE_TEAM_ID: ""
+  P8_APPLE_KEY_ID: ""
+  # FCM (Android push)
+  P8_FCM_PROJECT_ID: ""
+  P8_FCM_SERVICE_ACCOUNT_FILE: ""
+  # S3 / Object Storage
+  P8_S3_ACCESS_KEY_ID: "CHANGE_ME_S3_ACCESS_KEY"
+  P8_S3_SECRET_ACCESS_KEY: "CHANGE_ME_S3_SECRET_KEY"
+  # Stripe
+  P8_STRIPE_SECRET_KEY: ""
+  P8_STRIPE_PUBLISHABLE_KEY: ""
+  P8_STRIPE_WEBHOOK_SECRET: ""
+
+---
+# KEDA PostgreSQL trigger — connection string for ScaledObject polling
+apiVersion: v1
+kind: Secret
+metadata:
+  name: p8-keda-pg-connection
+  namespace: p8
+type: Opaque
+stringData:
+  connection: "postgresql://p8user:CHANGE_ME_DB_PASSWORD@p8-postgres-rw.p8.svc.cluster.local:5432/p8db"
