--- a/manifests/application/p8-stack/overlays/local/secrets.yaml
+++ b/manifests/application/p8-stack/overlays/local/secrets.yaml
@@ -9,14 +9,23 @@ stringData:
   password: p8_dev
 
 ---
+# Unified app secret — same structure as production
 apiVersion: v1
 kind: Secret
 metadata:
-  name: p8-llm-api-keys
+  name: p8-app-secrets
 type: Opaque
 stringData:
-  openai-api-key: ""
-  anthropic-api-key: ""
-  auth-session-secret: "local-dev-session-secret-32chars"
-  auth-google-client-id: "placeholder"
-  auth-google-client-secret: "placeholder"
+  P8_OPENAI_API_KEY: ""
+  P8_AUTH_SECRET_KEY: "local-dev-session-secret-32chars"
+  P8_API_KEY: ""
+  P8_GOOGLE_CLIENT_ID: ""
+  P8_GOOGLE_CLIENT_SECRET: ""
+  P8_S3_ACCESS_KEY_ID: ""
+  P8_S3_SECRET_ACCESS_KEY: ""
+  P8_STRIPE_SECRET_KEY: ""
+  P8_STRIPE_PUBLISHABLE_KEY: ""
+  P8_STRIPE_WEBHOOK_SECRET: ""
+  # FCM (Android push)
+  P8_FCM_PROJECT_ID: ""
+  P8_FCM_SERVICE_ACCOUNT_FILE: ""
