--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "pydantic-settings>=2.7",
     "asyncpg>=0.30",
     "cryptography>=44.0",
-    "httpx>=0.28",
+    "httpx[http2]>=0.28",
     "typer>=0.12",
     "pyyaml>=6.0",
     "fastembed>=0.4",
@@ -22,6 +22,8 @@ dependencies = [
     "pyjwt[crypto]>=2.8",
     "itsdangerous>=2.2.0",
     "hypercorn>=0.17",
+    "stripe>=11.0",
+    "google-auth>=2.28",
 ]
 
 [project.scripts]
