Add tiered QMS workers, Stripe billing, content pipeline improvements
- Tiered worker system (micro/small/medium/large) with KEDA PostgreSQL triggers
- Stripe billing integration (payments router, usage tracking, quota checks)
- Queue management service (p8/services/queue.py)
- Content pipeline enhancements and file processing handlers
- Agent adapter refactoring and streaming improvements
- Test reorganization into domain-specific directories
- Updated Dockerfile, docker-compose, and K8s manifests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 services:
   db:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile.pg18
+    # Custom PG18 with pgvector + pg_cron (built from docker/Dockerfile.pg18)
+    image: percolationlabs/rem-pg:18
     ports:
-      - "5488:5432"
+      - "5489:5432"
     environment:
       POSTGRES_DB: p8
       POSTGRES_USER: p8
