Add FCM service account secret + volume mount to API deployment
- Mount p8-fcm-service-account secret at /secrets/fcm (optional)
- Set P8_FCM_PROJECT_ID=percolate-452917 in Hetzner secrets
- Gitignore service account JSON and .p8 key files

--- a/manifests/application/p8-stack/components/api/deployment.yaml
+++ b/manifests/application/p8-stack/components/api/deployment.yaml
@@ -104,10 +104,17 @@ spec:
           volumeMounts:
             - name: tmp
               mountPath: /tmp
+            - name: fcm-sa
+              mountPath: /secrets/fcm
+              readOnly: true
 
       volumes:
         - name: tmp
           emptyDir: {}
+        - name: fcm-sa
+          secret:
+            secretName: p8-fcm-service-account
+            optional: true
 
       affinity:
         podAntiAffinity:
