--- a/manifests/application/p8-stack/overlays/hetzner/secrets.yaml
+++ b/manifests/application/p8-stack/overlays/hetzner/secrets.yaml
@@ -43,8 +43,8 @@ stringData:
   P8_APPLE_TEAM_ID: ""
   P8_APPLE_KEY_ID: ""
   # FCM (Android push)
-  P8_FCM_PROJECT_ID: ""
-  P8_FCM_SERVICE_ACCOUNT_FILE: ""
+  P8_FCM_PROJECT_ID: "percolate-452917"
+  P8_FCM_SERVICE_ACCOUNT_FILE: "/secrets/fcm/fcm-service-account.json"
   # S3 / Object Storage
   P8_S3_ACCESS_KEY_ID: "CHANGE_ME_S3_ACCESS_KEY"
   P8_S3_SECRET_ACCESS_KEY: "CHANGE_ME_S3_SECRET_KEY"
