--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "hypercorn>=0.17",
     "stripe>=11.0",
     "google-auth>=2.28",
+    "croniter>=1.3",
 ]
 
 [project.scripts]
