Add pg_net extension to PostgreSQL image for pg_cron HTTP scheduling
Adds pg_net v0.18.0 (PG18-compatible) to the custom postgres image.
Updates shared_preload_libraries and cron job URLs to use K8s service name.
Enables process-reminders and embed-process pg_cron jobs via pg_net.

--- a/manifests/application/p8-stack/components/postgres/postgres-cluster.yaml
+++ b/manifests/application/p8-stack/components/postgres/postgres-cluster.yaml
@@ -7,7 +7,7 @@ spec:
   instances: 1
   primaryUpdateStrategy: unsupervised
 
-  # Custom PG18 with pgvector + pg_cron (built from docker/Dockerfile.pg18)
+  # Custom PG18 with pgvector + pg_cron + pg_net (built from docker/Dockerfile.pg18)
   imageName: percolationlabs/rem-pg:18
 
   bootstrap:
@@ -33,6 +33,7 @@ spec:
   postgresql:
     shared_preload_libraries:
       - pg_cron
+      - pg_net
     parameters:
       max_connections: "200"
       cron.database_name: "p8db"
