--- a/docker/Dockerfile.pg18
+++ b/docker/Dockerfile.pg18
@@ -12,6 +12,13 @@ RUN cd /tmp && git clone --branch v0.8.1 https://github.com/pgvector/pgvector.gi
 RUN cd /tmp && git clone --branch v1.6.7 https://github.com/citusdata/pg_cron.git \
     && cd pg_cron && make && make install && rm -rf /tmp/pg_cron
 
+# pg_net (async HTTP from SQL — used by pg_cron to call API endpoints)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libcurl4-openssl-dev \
+    && cd /tmp && git clone --branch v0.18.0 https://github.com/supabase/pg_net.git \
+    && cd pg_net && make && make install \
+    && rm -rf /tmp/pg_net && rm -rf /var/lib/apt/lists/*
+
 RUN apt-get purge -y build-essential git postgresql-server-dev-18 \
     && apt-get autoremove -y && rm -rf /var/lib/apt/lists/*
 
