Fix CNPG Docker image (pg_net 0.20.2, bookworm base), add file processing threshold, bootstrap QueueService
- Rebuild Dockerfile.pg18 on CNPG-compatible bookworm base (UID 26) with pgvector 0.8.1, pg_cron 1.6.7, pg_net 0.20.2
- Add apt-mark manual libcurl4 to prevent autoremove cascade
- Add configurable file_processing_threshold_bytes (default 5MB) for inline vs queued processing
- Bootstrap QueueService in service init, expose on app.state
- Add imagePullPolicy: Always and pg_hba trust to postgres-cluster.yaml
- Add auth headers to embed-process pg_cron job via p8.api_key GUC
- Add sequence diagrams to docs/services.md
- Update CLI files to use *_rest tuple unpacking for bootstrap resilience

--- a/manifests/application/p8-stack/components/postgres/postgres-cluster.yaml
+++ b/manifests/application/p8-stack/components/postgres/postgres-cluster.yaml
@@ -9,6 +9,7 @@ spec:
 
   # Custom PG18 with pgvector + pg_cron + pg_net (built from docker/Dockerfile.pg18)
   imageName: percolationlabs/rem-pg:18
+  imagePullPolicy: Always
 
   bootstrap:
     initdb:
@@ -34,9 +35,12 @@ spec:
     shared_preload_libraries:
       - pg_cron
       - pg_net
+    pg_hba:
+      - local all all trust
     parameters:
       max_connections: "200"
       cron.database_name: "p8db"
+      pg_net.database_name: "p8db"
       shared_buffers: "1GB"
       effective_cache_size: "3GB"
       maintenance_work_mem: "256MB"
