--- a/docker/Dockerfile.pg18
+++ b/docker/Dockerfile.pg18
@@ -1,7 +1,10 @@
-FROM postgres:18-bookworm
+FROM ghcr.io/cloudnative-pg/postgresql:18-standard-bookworm
+
+USER root
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential git postgresql-server-dev-18 ca-certificates \
+    libcurl4-openssl-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # pgvector
@@ -12,15 +15,17 @@ RUN cd /tmp && git clone --branch v0.8.1 https://github.com/pgvector/pgvector.gi
 RUN cd /tmp && git clone --branch v1.6.7 https://github.com/citusdata/pg_cron.git \
     && cd pg_cron && make && make install && rm -rf /tmp/pg_cron
 
-# pg_net (async HTTP from SQL — used by pg_cron to call API endpoints)
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    libcurl4-openssl-dev \
-    && cd /tmp && git clone --branch v0.18.0 https://github.com/supabase/pg_net.git \
-    && cd pg_net && make && make install \
-    && rm -rf /tmp/pg_net && rm -rf /var/lib/apt/lists/*
+# pg_net (bookworm has libcurl 7.88 which satisfies >= 7.83 requirement)
+RUN cd /tmp && git clone --branch v0.20.2 https://github.com/supabase/pg_net.git \
+    && cd pg_net && make && make install && rm -rf /tmp/pg_net
 
-RUN apt-get purge -y build-essential git postgresql-server-dev-18 \
+# Keep libcurl4 (pg_net runtime dep) through autoremove
+RUN apt-mark manual libcurl4 2>/dev/null || true
+RUN apt-get purge -y build-essential git postgresql-server-dev-18 ca-certificates \
+    libcurl4-openssl-dev \
     && apt-get autoremove -y && rm -rf /var/lib/apt/lists/*
 
 COPY sql/install_entities.sql /docker-entrypoint-initdb.d/01-entities.sql
 COPY sql/install.sql /docker-entrypoint-initdb.d/02-core.sql
+
+USER 26
