--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,10 @@ dependencies = [
     "stripe>=11.0",
     "google-auth>=2.28",
     "croniter>=1.3",
+    "opentelemetry-api>=1.28.0",
+    "opentelemetry-sdk>=1.28.0",
+    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
+    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
 ]
 
 [project.scripts]
