Move credential files into .keys/ directory
Consolidate .dev-master.key and fcm-service-account.json into .keys/
(gitignored). Update kms_local_keyfile default and .env.example paths.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 P8_DATABASE_URL=postgresql://p8:p8_dev@localhost:5488/p8
 P8_OPENAI_API_KEY=sk-...
 P8_KMS_PROVIDER=local
-P8_KMS_LOCAL_KEYFILE=.dev-master.key
+P8_KMS_LOCAL_KEYFILE=.keys/.dev-master.key
 
 # API key (protects all endpoints except /health and /auth)
 P8_API_KEY=
