Reorganize tests into unit/integration, add git hooks
Split tests/ into unit/ (37 mocked tests, no DB) and integration/
(399 tests, requires Postgres). Add .githooks/pre-commit (unit tests)
and .githooks/pre-push (ephemeral DB + integration tests).

- Strip root conftest.py to env vars only, move DB fixtures to
  integration/conftest.py with port 5499 default
- Split test_cli.py and test_verify.py into unit/integration parts
- Move all other test dirs under tests/integration/
- Fix path references and imports broken by directory moves
- Add docker-compose.test.yml KMS service on port 8201
- Register pytest 'llm' marker, skip by default (run with -m llm)
- Fix dreaming handler model_name -> model attribute bug

--- a/docker/Dockerfile.pg18
+++ b/docker/Dockerfile.pg18
@@ -1,6 +1,6 @@
-FROM ghcr.io/cloudnative-pg/postgresql:18-standard-bookworm
-
-USER root
+# Local dev + test Postgres with pgvector, pg_cron, pg_net.
+# For CNPG/K8s, use the CNPG base image variant instead.
+FROM postgres:18-bookworm
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential git postgresql-server-dev-18 ca-certificates \
@@ -25,7 +25,7 @@ RUN apt-get purge -y build-essential git postgresql-server-dev-18 ca-certificate
     libcurl4-openssl-dev \
     && apt-get autoremove -y && rm -rf /var/lib/apt/lists/*
 
-COPY sql/install_entities.sql /docker-entrypoint-initdb.d/01-entities.sql
-COPY sql/install.sql /docker-entrypoint-initdb.d/02-core.sql
-
-USER 26
+COPY sql/01_install_entities.sql /docker-entrypoint-initdb.d/01_install_entities.sql
+COPY sql/02_install.sql          /docker-entrypoint-initdb.d/02_install.sql
+COPY sql/03_qms.sql              /docker-entrypoint-initdb.d/03_qms.sql
+COPY sql/04_payments.sql         /docker-entrypoint-initdb.d/04_payments.sql
