--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,20 +1,20 @@
+# Ephemeral database for integration tests (no volume — destroyed each run)
+# Usage: docker compose -p p8-test -f docker-compose.test.yml up -d --wait
+name: p8-test
 services:
   db:
-    # Custom PG18 with pgvector + pg_cron (built from docker/Dockerfile.pg18)
-    container_name: p8-local
+    container_name: p8-test
     image: p8-local:pg18
     build:
       context: .
       dockerfile: docker/Dockerfile.pg18
     ports:
-      - "5488:5432"
+      - "5499:5432"
     environment:
       POSTGRES_DB: p8
       POSTGRES_USER: p8
       POSTGRES_PASSWORD: p8_dev
       PGDATA: /var/lib/postgresql/data
-    volumes:
-      - pgdata:/var/lib/postgresql/data
     command: ["postgres", "-c", "shared_preload_libraries=pg_cron", "-c", "cron.database_name=p8"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U p8"]
@@ -25,10 +25,11 @@ services:
   kms:
     image: quay.io/openbao/openbao:2
     ports:
-      - "8200:8200"
+      - "8201:8200"
     environment:
       BAO_DEV_ROOT_TOKEN_ID: dev-root-token
       BAO_DEV_LISTEN_ADDRESS: "0.0.0.0:8200"
+      BAO_ADDR: "http://127.0.0.1:8200"
     cap_add:
       - IPC_LOCK
     command: server -dev
@@ -37,6 +38,3 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
-
-volumes:
-  pgdata:
