--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     environment:
       BAO_DEV_ROOT_TOKEN_ID: dev-root-token
       BAO_DEV_LISTEN_ADDRESS: "0.0.0.0:8200"
+      BAO_ADDR: "http://127.0.0.1:8200"
     cap_add:
       - IPC_LOCK
     command: server -dev
