Add image thumbnail generation, feed integration, and accumulated changes
- Add Pillow for thumbnail generation (400px max, JPEG 80%, EXIF-aware)
- Generate and upload thumbnails to S3 on image upload
- Embed base64 data URI as image_uri on content_upload moments
- Add thumbnail_uri field to File model
- Add ?thumbnail=true support to GET /content/files/{file_id}
- Expose image as top-level field in moments feed SQL
- Map image_uri → image in moments API responses
- Fix pre-existing mypy errors in agent_schema.py and adapter.py
- Add integration tests for thumbnail + upload→chat flow
- Accumulated changes: auth, billing, dreaming, memory, MCP tools, manifests

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 P8_DATABASE_URL=postgresql://p8:p8_dev@localhost:5488/p8
 P8_OPENAI_API_KEY=sk-...
+
+# KMS (local dev uses file key; production uses OpenBao vault)
 P8_KMS_PROVIDER=local
 P8_KMS_LOCAL_KEYFILE=.keys/.dev-master.key
+P8_KMS_VAULT_URL=http://127.0.0.1:8200
+P8_KMS_VAULT_TRANSIT_KEY=p8-master
+P8_KMS_VAULT_TOKEN=
 
 # API key (protects all endpoints except /health and /auth)
 P8_API_KEY=
