--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "opentelemetry-exporter-otlp-proto-http>=1.28.0",
     "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
     "tiktoken>=0.7",
+    "Pillow>=10.0",
 ]
 
 [project.scripts]
