--- a/manifests/application/p8-stack/overlays/hetzner/secrets.yaml
+++ b/manifests/application/p8-stack/overlays/hetzner/secrets.yaml
@@ -6,7 +6,6 @@
 #   p8-keda-pg-connection    — KEDA trigger (full connection string)
 #
 # All deployments (API + workers) share p8-app-secrets via envFrom.
-# The OTEL collector reads PHOENIX_* keys from p8-app-secrets.
 # The OpenBao StatefulSet + init Job read P8_KMS_VAULT_TOKEN from p8-app-secrets.
 # Keys are named as P8_* env vars so envFrom injects them directly.
 #
@@ -51,13 +50,16 @@ stringData:
   # S3 / Object Storage
   P8_S3_ACCESS_KEY_ID: "CHANGE_ME_S3_ACCESS_KEY"
   P8_S3_SECRET_ACCESS_KEY: "CHANGE_ME_S3_SECRET_KEY"
+  # Apple private key (file path or inline)
+  P8_APPLE_PRIVATE_KEY_PATH: ""
+  # Email credentials
+  P8_SMTP_USERNAME: ""
+  P8_SMTP_PASSWORD: ""
+  P8_RESEND_API_KEY: ""
   # Stripe
   P8_STRIPE_SECRET_KEY: ""
   P8_STRIPE_PUBLISHABLE_KEY: ""
   P8_STRIPE_WEBHOOK_SECRET: ""
-  # Phoenix (OTEL observability backend) — also read by otel-collector
-  PHOENIX_API_KEY: "CHANGE_ME_PHOENIX_API_KEY"
-  PHOENIX_ENDPOINT: "https://app.phoenix.arize.com"
   # KMS — OpenBao root/admin token (also read by openbao StatefulSet + init Job)
   P8_KMS_VAULT_TOKEN: "CHANGE_ME_OPENBAO_TOKEN"
 
