Add three-tier security context (USER/TENANT/MASTER)
SecurityContext with resolve_security_context FastAPI dependency.
Repository methods accept optional security param for access scoping.
MCP middleware builds SecurityContext from master key, tenant key, JWT, or headers.
Backward compatible — security=None preserves existing behavior.
Includes mypy fixes, remind_me test fix, and resources schema columns.

--- a/.schema/dreaming-agent.yaml
+++ b/.schema/dreaming-agent.yaml
@@ -32,7 +32,9 @@ description: |
   Propose 5 search questions based on the themes you found.
   For each question, call `search` twice:
     - `SEARCH "<question>" FROM moments LIMIT 2`
-    - `SEARCH "<question>" FROM resources LIMIT 2`
+    - `SEARCH "<question>" FROM resources CATEGORY document LIMIT 2`
+  # TODO: In future, filter for user content only (not just category='document').
+  # For now, CATEGORY document excludes auto-ingested news/digest items from dreaming.
 
   Add any newly discovered affinities to your dream moments.
 
