--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -14,6 +14,7 @@ services:
       POSTGRES_DB: p8
       POSTGRES_USER: p8
       POSTGRES_PASSWORD: p8_dev
+      POSTGRES_HOST_AUTH_METHOD: trust
       PGDATA: /var/lib/postgresql/data
     command: ["postgres", "-c", "shared_preload_libraries=pg_cron", "-c", "cron.database_name=p8"]
     healthcheck:
