--- a/manifests/application/p8-stack/overlays/hetzner/secrets.yaml
+++ b/manifests/application/p8-stack/overlays/hetzner/secrets.yaml
@@ -62,6 +62,8 @@ stringData:
   P8_STRIPE_WEBHOOK_SECRET: ""
   # KMS — OpenBao root/admin token (also read by openbao StatefulSet + init Job)
   P8_KMS_VAULT_TOKEN: "CHANGE_ME_OPENBAO_TOKEN"
+  # Web search (Tavily)
+  P8_TAVILY_API_KEY: ""
 
 ---
 # KEDA PostgreSQL trigger — connection string for ScaledObject polling
