Full reading pipeline, mosaic thumbnails, User.user_id validator, accumulated changes
Reading handler: rewrite as full pipeline (platoon fetch → upsert resources →
build moment with timestamp-based name → mosaic thumbnail → LLM summary →
companion session). Multiple reading moments per day now supported.

Mosaic: 3x2 center-cropped grid with soft blur.

User model: auto-populate user_id from id when not set.

GET /resources/reading: returns list of reading moments with pagination
instead of single deterministic-ID lookup.

Also includes: admin CLI (enqueue, health, quota), stripe webhook
improvements, notification fixes, search enhancements, feed encryption,
AG-UI system prompt fix, and test updates.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 P8_DATABASE_URL=postgresql://p8:p8_dev@localhost:5488/p8
+P8_REMOTE_DATABASE_URL=  # for `p8 db diff` — e.g. postgresql://user:pass@localhost:5433/dbname
 P8_OPENAI_API_KEY=sk-...
 
 # KMS (local dev uses file key; production uses OpenBao vault)
