--- a/.schema/dreaming-agent.yaml
+++ b/.schema/dreaming-agent.yaml
@@ -2,6 +2,7 @@ type: object
 name: dreaming-agent
 short_description: Background reflective agent that generates dream moments from recent user activity.
 structured_output: true
+chained_tool: save_moments
 model: openai:gpt-4.1-mini
 temperature: 0.7
 routing_enabled: false
