Personalize feed sources, add plots/email/sync, enhance auth and moments
- Build user-specific platoon sources from metadata feeds/categories
- Add plot save tool and collection moments
- Add Microsoft Graph email provider
- Add Google Drive sync handler and processor registration
- Enhance moments API with filtering and share endpoints
- Simplify auth service, fix Apple Sign-In edge cases
- Add researcher agent and QMS task priority support

--- a/.env.example
+++ b/.env.example
@@ -36,10 +36,17 @@ P8_APNS_ENVIRONMENT=sandbox
 P8_FCM_PROJECT_ID=
 P8_FCM_SERVICE_ACCOUNT_FILE=
 
-# Magic link email
+# Email (Microsoft Graph API — OAuth2, works with M365 + 2FA)
+# Register app at portal.azure.com → App registrations
+# Add Application permission: Microsoft Graph → Mail.Send → Grant admin consent
+# Create client secret under Certificates & secrets
 P8_MAGIC_LINK_BASE_URL=
-P8_EMAIL_PROVIDER=console
-P8_EMAIL_FROM=noreply@p8.dev
+P8_EMAIL_PROVIDER=microsoft_graph
+P8_EMAIL_FROM=saoirse@percolationlabs.ai
+P8_MS_GRAPH_TENANT_ID=
+P8_MS_GRAPH_CLIENT_ID=
+P8_MS_GRAPH_CLIENT_SECRET=
+# SMTP (alternative — may not work with M365 if basic auth disabled)
 P8_SMTP_HOST=
 P8_SMTP_PORT=587
 P8_SMTP_USERNAME=
