Add commerce analytics tools, get_file MCP tool, and CSV upload fixes
- Add get_file tool for reading uploaded files from S3 by file ID
- Add resolve_data_path helper so platoon tools accept UUIDs or local paths seamlessly
- Register platoon tools directly (not via mount) with stdio-only read_file
- Fix CSV upload: MIME type fallback, Kreuzberg extension mapping, subprocess mime passthrough
- Prefer raw S3 content for CSV files (Kreuzberg strips delimiters)
- Add commerce-analytics docs with tool reference, decision patterns, worked examples
- Add port conventions doc, update settings default port to 5489
- Update admin CLI, docs, and test fixtures

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ name: p8
 services:
   db:
     # Custom PG18 with pgvector + pg_cron (built from docker/Dockerfile.pg18)
-    container_name: p8-local
+    container_name: p8k8-db
     image: p8-local:pg18
     build:
       context: .
       dockerfile: docker/Dockerfile.pg18
     ports:
-      - "5488:5432"
+      - "5489:5432"
     environment:
       POSTGRES_DB: p8
       POSTGRES_USER: p8
