--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "p8"
 version = "0.1.0"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.13"
 dependencies = [
     "fastapi>=0.115",
     "uvicorn[standard]>=0.34",
@@ -37,7 +37,7 @@ dependencies = [
 p8 = "p8.api.cli:app"
 
 [project.optional-dependencies]
-platoon = ["p8-platoon[learning]>=0.5.0"]
+platoon = ["p8-platoon>=0.5.5"]
 
 [dependency-groups]
 dev = [
