--- a/manifests/application/p8-stack/overlays/hetzner/secrets.yaml
+++ b/manifests/application/p8-stack/overlays/hetzner/secrets.yaml
@@ -1,77 +1,13 @@
-# Hetzner Secrets — replace placeholder values before applying
+# Hetzner Secrets — MANAGED BY ESO
 #
-# Three secrets:
-#   p8-database-credentials  — CNPG bootstrap + DATABASE_URL interpolation
-#   p8-app-secrets           — all sensitive env vars (envFrom: secretRef)
-#   p8-keda-pg-connection    — KEDA trigger (full connection string)
+# All production secrets are now managed by External Secrets Operator (ESO)
+# pulling from OpenBao KV v2. This file is no longer applied.
 #
-# All deployments (API + workers) share p8-app-secrets via envFrom.
-# The OpenBao StatefulSet + init Job read P8_KMS_VAULT_TOKEN from p8-app-secrets.
-# Keys are named as P8_* env vars so envFrom injects them directly.
+# See: manifests/platform/external-secrets/
 #
-# Create from .env:
-#   kubectl --context=p8-w-1 -n p8 create secret generic p8-database-credentials \
-#     --from-literal=username=p8user --from-literal=password=REAL_PASSWORD \
-#     --dry-run=client -o yaml | kubectl apply -f -
-
-apiVersion: v1
-kind: Secret
-metadata:
-  name: p8-database-credentials
-  namespace: p8
-type: Opaque
-stringData:
-  username: p8user
-  password: "CHANGE_ME_DB_PASSWORD"
-
----
-# Unified app secret — shared by API and all workers via envFrom: secretRef
-apiVersion: v1
-kind: Secret
-metadata:
-  name: p8-app-secrets
-  namespace: p8
-type: Opaque
-stringData:
-  # LLM
-  P8_OPENAI_API_KEY: "CHANGE_ME_OPENAI_KEY"
-  # Auth
-  P8_AUTH_SECRET_KEY: "CHANGE_ME_SESSION_SECRET_32CHARS"
-  P8_API_KEY: ""
-  P8_GOOGLE_CLIENT_ID: ""
-  P8_GOOGLE_CLIENT_SECRET: ""
-  # Apple Sign In + APNs
-  P8_APPLE_CLIENT_ID: ""
-  P8_APPLE_TEAM_ID: ""
-  P8_APPLE_KEY_ID: ""
-  # FCM (Android push)
-  P8_FCM_PROJECT_ID: "percolate-452917"
-  P8_FCM_SERVICE_ACCOUNT_FILE: "/secrets/fcm/fcm-service-account.json"
-  # S3 / Object Storage
-  P8_S3_ACCESS_KEY_ID: "CHANGE_ME_S3_ACCESS_KEY"
-  P8_S3_SECRET_ACCESS_KEY: "CHANGE_ME_S3_SECRET_KEY"
-  # Apple private key (file path or inline)
-  P8_APPLE_PRIVATE_KEY_PATH: ""
-  # Email credentials
-  P8_SMTP_USERNAME: ""
-  P8_SMTP_PASSWORD: ""
-  P8_RESEND_API_KEY: ""
-  # Stripe
-  P8_STRIPE_SECRET_KEY: ""
-  P8_STRIPE_PUBLISHABLE_KEY: ""
-  P8_STRIPE_WEBHOOK_SECRET: ""
-  # KMS — OpenBao root/admin token (also read by openbao StatefulSet + init Job)
-  P8_KMS_VAULT_TOKEN: "CHANGE_ME_OPENBAO_TOKEN"
-  # Web search (Tavily)
-  P8_TAVILY_API_KEY: ""
-
----
-# KEDA PostgreSQL trigger — connection string for ScaledObject polling
-apiVersion: v1
-kind: Secret
-metadata:
-  name: p8-keda-pg-connection
-  namespace: p8
-type: Opaque
-stringData:
-  connection: "postgresql://p8user:CHANGE_ME_DB_PASSWORD@p8-postgres-rw.p8.svc.cluster.local:5432/p8db"
+# To add or update a secret:
+#   1. Write to OpenBao:  kubectl exec openbao-0 -c openbao -- bao kv put secret/p8/app-secrets KEY=value
+#   2. ESO syncs automatically every 1h, or force: kubectl annotate externalsecrets p8-app-secrets force-sync=$(date +%s) --overwrite
+#
+# To seed all secrets from .env:
+#   ./manifests/scripts/seed-openbao.sh --context=p8-w-1
