--- a/manifests/platform/external-secrets/cluster-secret-store.yaml
+++ b/manifests/platform/external-secrets/cluster-secret-store.yaml
@@ -1,4 +1,4 @@
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: openbao-kv
@@ -10,6 +10,6 @@ spec:
       version: "v2"
       auth:
         tokenSecretRef:
-          name: p8-app-secrets
+          name: openbao-eso-token
           namespace: p8
-          key: P8_KMS_VAULT_TOKEN
+          key: token
