--- a/manifests/platform/external-secrets/external-secret-keda.yaml
+++ b/manifests/platform/external-secrets/external-secret-keda.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: p8-app-secrets
+  name: p8-keda-pg-connection
   namespace: p8
 spec:
   refreshInterval: 1h
@@ -9,8 +9,10 @@ spec:
     name: openbao-kv
     kind: ClusterSecretStore
   target:
-    name: p8-app-secrets
+    name: p8-keda-pg-connection
     creationPolicy: Owner
-  dataFrom:
-    - extract:
-        key: p8/app-secrets
+  data:
+    - secretKey: connection
+      remoteRef:
+        key: p8/keda-pg-connection
+        property: connection
