--- a/manifests/platform/external-secrets/kustomization.yaml
+++ b/manifests/platform/external-secrets/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
   - cluster-secret-store.yaml
   - external-secret.yaml
+  - external-secret-db.yaml
+  - external-secret-keda.yaml
