--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
     "tiktoken>=0.7",
     "Pillow>=10.0",
+    "slack-sdk>=3.27",
 ]
 
 [project.scripts]
